[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-commit-tool"
version = "0.1.0"
description = "Автоматизация проверок (Ruff/Pytest) перед коммитом и пушем"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli; python_version < '3.11'",
    "colorama"
]

[project.scripts]
smart-commit = "smart_commit.cli:main"

[tool.smart_commit]
repository_url = "git@github.com:mokinprokin/smart_commit.git"
commands = ["ruff check ."]

[tool.hatch.build.targets.wheel]
packages = ["src/smart_commit"]