[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-commit-tool"
version = "3.0.2"
description = "Automated pre-push workflow manager with built-in code quality enforcement and smart branch protection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli; python_version < '3.11'",
    "colorama"
]

[project.scripts]
smart-commit = "smart_commit.cli:main"

[tool.smart_commit]
repository_url = "https://github.com/mokinprokin/SmartCommit.git"
commands = ["ruff check ."]
protected_branches = ["master", "prod", "release"]

[tool.hatch.build.targets.wheel]
packages = ["src/smart_commit"]